[tool.poetry]
name = "bingdalle"
version = "0.1.0"
description = ""
authors = ["x404xx <ghost.py@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
rich = "^13.7.0"
six = "^1.16.0"
colorama = "^0.4.6"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"